fix : minor edit in page align

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body{
 	padding-top: 10px;
 	padding-bottom: 20px;
     border-radius: 25px;
+    text-align:center;
 	
 }
 a:link{
